img stretch fix attempt

--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ a:visited {
 
 .promo-img{
     max-width: 100%;
-    height: 100%;
+    
    
 }
 
@@ -268,6 +268,7 @@ a:visited {
     display: none;
     width: 30px;
     width: 30px;
+    cursor: pointer;
 }
 
 
